# demeter

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  environment.yaml  pyproject.toml  requirements.txt
demeter/: __main__.py  aoi_check.py  burnt_area_mapper.py  data_retrieval.py  demeter_main.py  utils.py
tests/: alpha_road_tambaroora.gpkg  empty.gpkg  test_aoi.py
